fix columns stretching (#122)

--- a/app/javascript/components/ActionItem/ActionItemBody/ActionItemBody.css
+++ b/app/javascript/components/ActionItem/ActionItemBody/ActionItemBody.css
@@ -7,3 +7,5 @@ textarea {
            line-height: 1.5;           
            color: hsl(0, 0%, 29%);
          }
+
+.text { overflow-wrap: break-word; }
